--- a/app/views/home/_hearder.html.erb
+++ b/app/views/home/_hearder.html.erb
@@ -9,7 +9,10 @@
         <li class="nav-item">
 
           <%= link_to "About Us", home_about_path, class:"nav-link" %>
+          
         </li>
+        <li><%= link_to "Friends", friends_path, class:"nav-link" %></li>
+        <li><%= link_to "Add Friend", new_friend_path, class:"nav-link" %></li>
      
       </ul>
       <form class="d-flex">
