--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,10 @@
   <body>
   <%= render 'home/hearder' %>
   <div class ="container">
+<br />
+  <% if notice %>
+  <%= render 'layouts/alert' %>
+  <% end %>
   <br />
   <%= yield %>
 </div>
